--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,33 +1,5 @@
-.aside-menu
-	.aside-menu__title
-		.title-48 Menu
-	nav.aside-menu__list
-		//=== single block ====
-		.aside-menu__list-block
-			a(href="#!") Solar panels
-			a(href="#!") Heat pumps
-			a(href="#!") Bathroom and Kitchen improvement
-			a(href="#!") Glazing
-			a(href="#!") Home chargers #[span for electric cars]
-		
-		//=== single block ====
-		.aside-menu__list-block
-			a(href="#!") Reviews
-			a(href="#!") Comparison
-			a(href="#!") Articles
-		
-		//=== single block ====
-		.aside-menu__list-block
-			a(href="#!") Sign in
-		
-	.aside-menu__img
-		.cart(style="background-image: url(./img/card-bg.jpg);")
-			p Members receive great discounts, get quotes from top home improvement companies and stay up to date with design trends
-			a.btn-round.btn-round--yellow(href="#!")
-				span Sign up now
-				span.arrowRight
-			
-
+include ../blocks/_aside-menu
+//========header-top=======
 .header-top
 	.container
 		.header-top__content
