--- a/src/pug/sections/_ui.pug
+++ b/src/pug/sections/_ui.pug
@@ -1,11 +1,39 @@
+
 .container
+	
 	ul.test
 		li
-			.nav-icon
-				span
+			.li-item.title-96 title-96
+			pre.
+				.title-96 title-96
+			br
+			
+			.title-88 title-88
+			pre.
+				.title-88 title-88
+			br
+			
+			.title-48 title-48
+			pre.
+				.title-48 title-48
+			br
+			
+			.title-38 title-38
+			pre.
+				.title-38 title-38
+			br
+			
+			.text-186 24
+			pre.
+				.text-186 24
+			br
+			
+			.text-94 256
+			pre.
+				.text-94 256
 
 		li
-			.btn
+			button.btn
 				span Request a quote
 				span.arrowRight
 			pre.
@@ -13,7 +41,7 @@
 					span Request a quote
 					span.arrowRight
 		li
-			.btn-round
+			a(href="#!").btn-round
 				span Request a quote
 				span.arrowRight
 			pre.
@@ -21,11 +49,20 @@
 					span Request a quote
 					span.arrowRight
 		li
+			h3(style="margin-bottom: 15px;") input[type="submit"] as button
+			.submit-arrow
+				input(type="submit" value="Request a quote ").btn-round.btn-round--yellow
+				span.arrowRight
+			pre.
+				.submit-arrow
+					input(type="submit" value="Request a quote ").btn-round.btn-round--yellow
+					span.arrowRight
+		li
 			.btn-round.btn-round--yellow
 				span Request a quote
 				span.arrowRight
 			pre.
-				.btn-round
+				.btn-round.btn-round--yellow
 					span Request a quote
 					span.arrowRight
 
@@ -56,3 +93,33 @@
 			.label CW3
 			pre.
 				.label CW3
+
+		li
+			.card-btn(style="background-image: url(./img/card-bg.jpg);")
+				p Members receive great discounts, get quotes from top home improvement companies and stay up to date with design trends
+				a.btn-round.btn-round--yellow(href="#!")
+					span Sign up now
+					span.arrowRight
+			pre.
+				.card-btn(style="background-image: url(./img/card-bg.jpg);")
+					p Members receive great discounts, get quotes from top home improvement companies and stay up to date with design trends
+					a.btn-round.btn-round--yellow(href="#!")
+						span Sign up now
+						span.arrowRight
+		li(style="background-color:  #F7F7F7;")
+			.form-item
+				input(type="text" placeholder="Heating and hot water supply")
+			
+			pre.
+				.form-item
+					input(type="text" placeholder="Heating and hot water supply")
+		
+		li(style="background-color:  #348AA7;")
+			.form-item.form-item--base
+				label Zip Code
+				input(type="text" placeholder="Heating and hot water supply")
+			
+			pre.
+				.form-item.form-item--base
+					label Zip Code
+					input(type="text" placeholder="Heating and hot water supply")
