--- a/src/scss/base/_var.scss
+++ b/src/scss/base/_var.scss
@@ -1,7 +1,7 @@
 $fonts-path: '../fonts';
-$fc:'Commissioner', Arial, sans-serif;
-$fm:'Montserrat', 'Commissioner', Arial, sans-serif ;
-$fd:'Playfair Display', 'Commissioner', Arial, sans-serif;
+$fc:'Commissioner';
+$fm:'Montserrat' ;
+$fd:'Playfair Display';
 
 $white:    #fff;
 $gray-100: #F7F7F7; 
