--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,8 +5,12 @@
 
 @import "base/_base";
 @import "base/_buttons";
+@import "base/_form";
 
 //blocks
-
- @import "blocks/header";
+ 
  @import "blocks/aside-menu.scss";
+ @import "blocks/card-number.scss";
+
+ //sections
+ @import "sections/header";
