--- a/src/scss/base/_typografy.scss
+++ b/src/scss/base/_typografy.scss
@@ -1,5 +1,5 @@
 /*typografy*/
-.title-96, .title-88, .title-48{
+.title-96, .title-88, .title-48,.text-186, .text-94{
 	font-family: $fd;
 	font-weight: 900;
 }
@@ -14,6 +14,11 @@
 .title-48 {
 	font-size: 48px;
     line-height: 1.12;
+}
+.title-38{
+	font-size: 38px;
+	font-weight: 500;
+	font-family: $fc;
 }
 .text-186{
 	font-size: 186px;
