--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -89,18 +89,7 @@ $height: $lineHeight * 4;
         transform: rotate(-45deg);
     }
 }
-
-.cart {
-    padding: 20px 50px 20px 20px;
-    border-radius: 10px;
-    background-size: cover;
-	background-color: $greenDark;
-    background-position: center center;
-    background-repeat: no-repeat;
-    color: #fff;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-	p{margin-bottom: 20px;}
-	max-width: 410px;
+.nav-icon:hover{
+    span, span:after, span:before{  background-color: $yellow;} 
 }
+.nav-icon.nav-icon--active:hover span{ background-color: transparent;}
