--- a/src/pug/blocks/_quiz.pug
+++ b/src/pug/blocks/_quiz.pug
@@ -1,8 +1,8 @@
-//===== aside menu ======
-.aside-panel.aside-menu(data-content="asideMenu")
+//===== quiz ======
+.aside-panel.quiz(data-content="quiz")
 	.aside-container
 		.aside-panel__title
-			.title-48 Menu
+			.title-38 Menu
 		nav.aside-menu__list
 			//=== single block ====
 			.aside-menu__list-block
