--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -9,7 +9,10 @@ html(lang="en")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
 		//====remove blue color for safari ========
 		meta(name="format-detection" content="telephone=no")
-
+		
+		//====plagin for inputRange ========
+		link(rel="stylesheet", href="libs/jQueryUi/jQuery_ui.css")
+		
 		link(rel="stylesheet", href="css/main.css")
 		title !{title}
 		
@@ -17,6 +20,9 @@ html(lang="en")
 		#overlay
 		block content
 		
-		
+		script(src="libs/jquery/jquery-3.0.0.min.js")
+		//====plagin for inputRange ========
+		script(src="libs/jQueryUi/jQuery_Ui.js")
+		script(src="libs/jQueryUi/jQuery_Touch.js")
 		//=============== my scripts ===================	
 		script(src="js/main.js")
