--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -4,5 +4,5 @@ include ../blocks/_aside-menu
 	.container
 		.header-top__content
 			a(href="#!").logo #[span the ] green home
-			.nav-icon
+			.nav-icon(data-btn="asideMenu")
 				span
