--- a/src/pug/blocks/_aside-menu.pug
+++ b/src/pug/blocks/_aside-menu.pug
@@ -1,6 +1,7 @@
 //===== aside menu ======
-.aside-panel.aside-menu(data-content="asideMenu")
+.aside-panel.aside-menu
 	.aside-container
+		.btn-close
 		.aside-panel__title
 			.title-48 Menu
 		nav.aside-menu__list
