--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,8 +1,12 @@
+include ../blocks/_quiz
 include ../blocks/_aside-menu
 //========header-top=======
 .header-top
 	.container
 		.header-top__content
 			a(href="#!").logo #[span the ] green home
-			.nav-icon(data-btn="asideMenu")
+			.nav-icon
 				span
+		.btn-round.btn-round--yellow(data-quiz)
+			span Request a quote
+			span.arrowRight
