--- a/src/pug/blocks/_quiz.pug
+++ b/src/pug/blocks/_quiz.pug
@@ -1,30 +1,7 @@
 //===== quiz ======
-.aside-panel.quiz(data-content="quiz")
+.aside-panel.quiz#quiz
 	.aside-container
+		.btn-close
 		.aside-panel__title
-			.title-38 Menu
-		nav.aside-menu__list
-			//=== single block ====
-			.aside-menu__list-block
-				a(href="#!") Solar panels
-				a(href="#!") Heat pumps
-				a(href="#!") Bathroom and Kitchen improvement
-				a(href="#!") Glazing
-				a(href="#!") Home chargers #[span for electric cars]
-			
-			//=== single block ====
-			.aside-menu__list-block
-				a(href="#!") Reviews
-				a(href="#!") Comparison
-				a(href="#!") Articles
-			
-			//=== single block ====
-			.aside-menu__list-block
-				a(href="#!") Sign in
-			
-		.aside-menu__img
-			.card-btn(style="background-image: url(./img/card-bg.jpg);")
-				p Members receive great discounts, get quotes from top home improvement companies and stay up to date with design trends
-				a.btn-round.btn-round--yellow(href="#!")
-					span Sign up now
-					span.arrowRight
+			.title-48 Assistance
+		
