--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -84,3 +84,17 @@
 	    
 	}
 }
+.btn-close{
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	background-color: rgba(255,255,255, 1);
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M2 2L30 30M2 30L30 2L2 30Z' stroke='%23C4C4C4' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+	background-size: auto;
+	background-position: center;
+	background-repeat: no-repeat;
+	cursor:pointer;
+	&:hover{
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M2 2L30 30M2 30L30 2L2 30Z' stroke='%23FFCF56' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+	}
+}
