--- a/src/pug/sections/_ui.pug
+++ b/src/pug/sections/_ui.pug
@@ -74,9 +74,9 @@
 				.title-88 title-88
 			br
 			
-			.title-48 title-48
+			.title-48.text-green title-48
 			pre.
-				.title-48 title-48
+				.title-48.text-green title-48
 			br
 			
 			.title-38 title-38
