--- a/src/scss/base/_typografy.scss
+++ b/src/scss/base/_typografy.scss
@@ -28,3 +28,9 @@
 	font-size: 94px;
 	line-height: 0.85;
 }
+.text-green, .text-green>*{
+	color: $green!important;
+}
+.mb-40{
+	margin-bottom: 40px!important;
+}
