--- a/src/pug/blocks/_quiz.pug
+++ b/src/pug/blocks/_quiz.pug
@@ -3,5 +3,205 @@
 	.aside-container
 		.btn-close
 		.aside-panel__title
-			.title-48 Assistance
+			.title-48.text-green Assistance
 		
+		//============== question #1 ================
+		.quiz-plate.active
+			.quiz-header
+				.quiz-progress.mb-40
+					span
+			.quiz-body
+				.title-38.mb-40 Where do you use your boiler?
+				.quiz-questions
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="house_type")
+							span Apartment
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="house_type")
+							span Apartment2
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="house_type")
+							span Apartment3
+					.form-btn
+						
+						button.btn-round-light(data-role="next")
+							span Next step
+							span.arrowRight-green
+		
+		//============== question #2 ================
+		.quiz-plate
+			.quiz-header
+				.quiz-progress.mb-40
+					span
+			.quiz-body
+				.title-38.mb-40 What is your address?
+				.quiz-questions
+					.quiz-group
+						.form-item.form-item--base
+							label Zip Code
+							input(type="text" name="zipCode")
+						.form-row
+							.form-item.form-item--base
+								label Number
+								input(type="text" name="nubber")
+							.form-item.form-item--base
+								label Add to.
+								input(type="text" name="addTo")
+					.form-btn
+						button.btn-arrow
+							span.arrowGray
+						button.btn-round-light(data-role="next")
+							span Next step
+							span.arrowRight-green
+		
+		//============== question #3 ================
+		.quiz-plate
+			.quiz-header
+				.quiz-progress.mb-40
+					span
+			.quiz-body
+				.title-38.mb-40 How big is your house?
+				.quiz-questions
+					.area-range
+						.range-results-wrap
+							.range-results
+								| 50 m
+								sup 2
+							.range-total
+								| 390 m
+								sup 3
+						.range
+							input(type='range' min='1' max='6' steps='1' value='1')
+						ul.range-labels
+							li.active.selected
+								.range-results
+									| 50 m
+									sup 2
+								.range-total
+									| 130 m
+									sup 3
+							li
+								.range-results
+									| 100 m
+									sup 2
+								.range-total
+									| 260 m
+									sup 3
+							li
+								.range-results
+									| 150 m
+									sup 2
+								.range-total
+									| 390 m
+									sup 3
+							li
+								.range-results
+									| 200 m
+									sup 2
+								.range-total
+									| 520 m
+									sup 3
+							li
+								.range-results
+									| 650 m
+									sup 2
+								.range-total
+									| 390 m
+									sup 3
+							li
+								.range-results
+									| 780 m
+									sup 2
+								.range-total
+									| 390 m
+									sup 3
+					.form-btn
+						button.btn-arrow
+							span.arrowGray
+						button.btn-round-light(data-role="next")
+							span Next step
+							span.arrowRight-green
+
+		//============== question #4 ================
+		.quiz-plate
+			.quiz-header
+				.quiz-progress.mb-40
+					span
+			.quiz-body
+				.title-38.mb-40 What type of property do you have?
+				.quiz-questions
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span Apartment
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span House
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span Detached house
+					.form-btn
+						button.btn-arrow
+							span.arrowGray
+						button.btn-round-light(data-role="next")
+							span Next step
+							span.arrowRight-green
+
+		//============== question #5 ================
+		.quiz-plate
+			.quiz-header
+				.quiz-progress.mb-40
+					span
+			.quiz-body
+				.title-38.mb-40 What desk do you have?
+				.quiz-questions
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span A spaardouche
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span A regular shower
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span A deposit safe
+					.form-btn
+						button.btn-arrow
+							span.arrowGray
+						button.btn-round-light(data-role="next")
+							span Next step
+							span.arrowRight-green
+		
+		//============== question #6 ================
+		.quiz-plate
+			.quiz-header
+				.quiz-progress.mb-40
+					span
+			.quiz-body
+				.title-38.mb-40 Do you have a tub or two showers?
+				.quiz-questions
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span No, I don’t have
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span I have a bath tub
+					.form-item.form-item--base
+						label.custom-radiobutton
+							input(type="radio" name="type_property")
+							span I have a second shower
+					.form-btn
+						button.btn-arrow
+							span.arrowGray
+						button.btn-round-light(data-role="next")
+							span Next step
+							span.arrowRight-green
