--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -27,6 +27,7 @@
 		border-radius: 10px;
 		font-family: inherit;
 		font-weight: 700;
+		font-size: 20px;
 		width: 100%;
 		border: none;
 		outline: none;
@@ -60,12 +61,19 @@
 	grid-template-columns: 1fr 1fr;
 	column-gap: 20px;
 	margin-top: 20px;
+	.form-item+.form-item{
+		margin-top: 0;
+	}
 }
 .form-btn{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	margin-top: 50px;
+	.btn-round-light{
+		padding-left: 40px;
+		padding-right: 40px;
+	}
 }
 /*********custom radio********/
 input[type="radio"]{
@@ -213,6 +221,9 @@ input[type="radio"]{
       &:before {
         left: 0;
         right: auto;
+		width: 20px;
+		height: 20px;
+		top: 3px;
       }
     }
     &:before {
