--- a/src/scss/blocks/_aside-menu.scss
+++ b/src/scss/blocks/_aside-menu.scss
@@ -29,7 +29,7 @@
 	}
 	
 	.title-48{color: #fff;}
-	&__title{margin-bottom: 30px;}
+	&__title{margin-bottom: 30px; padding-top: 10px;}
 	
 	.aside-container{
 		width: 470px;
