--- a/src/pug/blocks/_aside-menu.pug
+++ b/src/pug/blocks/_aside-menu.pug
@@ -9,7 +9,7 @@
 			.aside-menu__list-block
 				a(href="#!") Solar panels
 				a(href="#!") Heat pumps
-				a(href="#!") Bathroom and Kitchen improvement
+				a(href="#!") Bathroom and Kitchen improvement
 				a(href="#!") Glazing
 				a(href="#!") Home chargers #[span for electric cars]
 			
@@ -24,7 +24,7 @@
 				a(href="#!") Sign in
 			
 		.aside-menu__img
-			.card-btn(style="background-image: url(./img/card-bg.jpg);")
+			.card-bg(style="background-image: url(./img/card-bg.jpg);")
 				p Members receive great discounts, get quotes from top home improvement companies and stay up to date with design trends
 				a.btn-round.btn-round--yellow(href="#!")
 					span Sign up now
