--- a/src/pug/sections/_ui.pug
+++ b/src/pug/sections/_ui.pug
@@ -156,13 +156,13 @@
 				.label CW3
 
 		li
-			.card-btn(style="background-image: url(./img/card-bg.jpg);")
+			.card-bg(style="background-image: url(./img/card-bg.jpg);")
 				p Members receive great discounts, get quotes from top home improvement companies and stay up to date with design trends
 				a.btn-round.btn-round--yellow(href="#!")
 					span Sign up now
 					span.arrowRight
 			pre.
-				.card-btn(style="background-image: url(./img/card-bg.jpg);")
+				.card-bg(style="background-image: url(./img/card-bg.jpg);")
 					p Members receive great discounts, get quotes from top home improvement companies and stay up to date with design trends
 					a.btn-round.btn-round--yellow(href="#!")
 						span Sign up now
