--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,7 +1,10 @@
 extends ../layouts/layout.pug
 
 block content
-	include ../sections/_header.pug
+	include ../blocks/_aside-menu
+	main.home-page
+		include ../sections/_header.pug
+		include ../sections/_home-page-header.pug
 	
 	
 	
