--- a/src/scss/base/_typografy.scss
+++ b/src/scss/base/_typografy.scss
@@ -28,9 +28,21 @@
 	font-size: 94px;
 	line-height: 0.85;
 }
+.text-24{
+	font-size: 24px;
+	line-height: 30px;
+	font-family: $fc;
+	font-weight: 500;
+}
 .text-green, .text-green>*{
 	color: $green!important;
 }
 .mb-40{
 	margin-bottom: 40px!important;
+}
+.p-120{
+	padding-top: 120px;
+}
+.section-title{
+	margin-bottom: 50px;
 }
