--- a/src/scss/blocks/_card-number.scss
+++ b/src/scss/blocks/_card-number.scss
@@ -1,5 +1,5 @@
 /**card registr btn*/
-.card-btn {
+.card-bg {
     padding: 20px 50px 20px 20px;
     border-radius: 10px;
     background-size: cover;
@@ -7,9 +7,64 @@
     background-position: center center;
     background-repeat: no-repeat;
     color: #fff;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-	p{margin-bottom: 20px;}
+    &>*+*{margin-top: 20px;}
 	
+}
+.thing-card{
+    background: #EDEAD0;
+    border-radius: 10px;
+    padding: 20px;
+    padding-bottom: 0;
+    width: 100%;
+
+    &__title{
+        font-size: 54px;
+        line-height: 1.07;
+        font-family: $fc;
+        font-weight: 500;
+        margin-bottom: 50px;
+        min-height: 115px;
+       
+    }
+    &__img{
+        height: 314px;
+        overflow: hidden;
+    }
+}
+.thing-card.thing-card--flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    .thing-card__img{
+        height: 216px;
+        margin-left: auto;
+        flex-shrink:0;
+        display: flex;
+        align-items: flex-end;
+        
+       
+    }
+    .thing-card__title{
+        min-height: unset;
+        margin-bottom: 0;
+        padding-bottom: 20px;
+        height: 100%;
+        p{
+            margin-top: auto;
+        }
+       p+ span{
+            display: block;
+            margin-top: auto;
+            font-size: 24px;
+            line-height: 28px;
+        }
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        
+        
+    }
+}
+.thing-card.bg-white{
+    border: 1px solid #000000;
 }
