--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,6 +5,7 @@ block content
 	main.home-page
 		include ../sections/_header.pug
 		include ../sections/_home-page-header.pug
+		include ../sections/_we-know.pug
 	
 	
 	
