--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -30,8 +30,9 @@
 	 bottom: 0;
 	 left: 0;
 	 right: 0;
-	 background-color: rgba(0,0,0,0.5);
-	//  backdrop-filter: blur(5px);
+	 background-color: rgba(0,0,0,0.7);
+	
+	z-index: 3;
 	 display: none;
 	 &.overlay--active{display: block;}
  } 
@@ -112,4 +113,7 @@ input[type="submit"]{
 }
 .bg-white{
 	background: #ffffff !important;
+}
+.text-center{
+	text-align: center !important;
 }
