--- a/src/scss/base/_typografy.scss
+++ b/src/scss/base/_typografy.scss
@@ -1,5 +1,5 @@
 /*typografy*/
-.title-96, .title-88, .title-48,.text-186, .text-94{
+.title-96, .title-88, .title-48,.title-44,.text-186, .text-94{
 	font-family: $fd;
 	font-weight: 900;
 }
@@ -14,6 +14,10 @@
 .title-48 {
 	font-size: 48px;
     line-height: 1.12;
+}
+.title-44 {
+	font-size: 44px;
+    line-height: 1.14;
 }
 .title-38{
 	font-size: 38px;
@@ -40,7 +44,7 @@
 .mb-40{
 	margin-bottom: 40px!important;
 }
-.p-120{
+.pt-120{
 	padding-top: 120px;
 }
 .section-title{
