--- a/src/pug/sections/_we-know.pug
+++ b/src/pug/sections/_we-know.pug
@@ -34,6 +34,8 @@ section.we-know.pt-120
 						span for electric cars
 					.thing-card__img
 						img(src="./img/charger.png", width="260" alt="charger")
+
+//====================== REWIEW ===========
 section.reviews.pt-120
 	.container
 		.section-title
@@ -95,3 +97,73 @@ section.reviews.pt-120
 					.card-link__right
 						img(src="./img/post3.jpg", width="280" height="176"  alt="")
 
+//====================== POPPULARE ===========
+section.popular.pt-120
+	.container
+		.section-title
+			.title-88 Latest reviews
+			.text-24 made by home improvement experts and authors
+		
+		.card-link-wrapper
+			//================= left block ============
+			.card-link-wrapper__left
+				.card-link-banner.text-center(style="background-image: url(./img/article-banner.jpg)")
+					.card-link-banner__text
+						.title-44 How Professionals Estimate Kitchen Remodeling Costs
+						p The company’s philosophy is simple: Quality and Comfort does not have to be expensive to afford
+			
+			//================= right block ============
+			.card-link-wrapper__right
+				
+				//============= single card ==============
+				a(href="#!").card-link
+					.card-link__left
+						.text-24 Counter Depth Refrigerator Dimensions Guide
+						
+						p Specialize in energy efficient homes with high insulation that provide very comfortable
+					.card-link__right
+						img(src="./img/post1.jpg", width="280" height="176"  alt="")
+				
+				//============= single card ==============
+				a(href="#!").card-link
+					.card-link__left
+						.text-24 How to Repair a Clogged Garbage Disposal
+						
+						p The company’s philosophy is simple: Quality and Comfort does not have to be expensive to afford and to enjoy
+					
+					.card-link__right
+						img(src="./img/post2.jpg", width="280" height="176"  alt="")
+				
+				
+				//============= single card ==============
+				a(href="#!").card-link
+					.card-link__left
+						.text-24 Pros and Cons of Marble Flooring in Kitchens
+						
+						p Specialize in energy efficient homes with high insulation that provide very comfortable temperature inside a house
+					.card-link__right
+						img(src="./img/post3.jpg", width="280" height="176"  alt="")
+
+		//==========section button==========
+		.button-wrapper.text-center.mt-50
+			a(href="#!").btn-round
+				span Check all articles
+				span.arrowRight
+		//===============number cards =============
+		.number-cards-wrapper.wrapper--reverse
+			
+			.card-bg(style="background-image: url(./img/card-bg.jpg);")
+				.text-24 Members receive great discounts, get quotes <br> from top home improvement companies and more
+				a.btn-round.btn-round--yellow(href="#!")
+					span Sign up now
+					span.arrowRight
+			
+			.number-card
+				.text-94 256
+				.text-24 home improvement articles and guides 
+			
+			.number-card.number-card--light
+				.text-94 76
+				.text-24 home improvement company reviews
+
+			
