--- a/src/scss/sections/_home-page-header.scss
+++ b/src/scss/sections/_home-page-header.scss
@@ -1,11 +1,15 @@
 .header{
 	padding-top: 40px;
+	
 }
 .number-cards-wrapper{
 	display: grid;
 	grid-template-columns: 1fr 1fr 2.1fr;
 	column-gap:40px;
 	margin-top: 60px;
+}
+.number-cards-wrapper.wrapper--reverse{
+	grid-template-columns:  2.1fr 1fr 1fr;
 }
 .home-page{
 	.header{
