--- a/src/pug/blocks/_aside-menu.pug
+++ b/src/pug/blocks/_aside-menu.pug
@@ -28,4 +28,4 @@
 				p Members receive great discounts, get quotes from top home improvement companies and stay up to date with design trends
 				a.btn-round.btn-round--yellow(href="#!")
 					span Sign up now
-					span.arrowRight
+					span.arrowRight-black
