--- a/src/pug/pages/categories.pug
+++ b/src/pug/pages/categories.pug
@@ -6,7 +6,7 @@ block content
 	include ../sections/_header.pug
 	.btn-round.btn-round--yellow(data-quiz)
 		span Request a quote
-		span.arrowRight
+		span.arrowRight-black
 	
 	
 	
