--- a/src/pug/sections/_ui.pug
+++ b/src/pug/sections/_ui.pug
@@ -121,11 +121,11 @@
 		li
 			.btn-round.btn-round--yellow
 				span Request a quote
-				span.arrowRight
+				span.arrowRight-black
 			pre.
 				.btn-round.btn-round--yellow
 					span Request a quote
-					span.arrowRight
+					span.arrowRight-black
 
 		li
 			.btn-round-light
