--- a/src/pug/sections/_home-page-header.pug
+++ b/src/pug/sections/_home-page-header.pug
@@ -16,5 +16,5 @@ header.header
 				.text-24 Members receive great discounts, get quotes <br> from top home improvement companies and more
 				a.btn-round.btn-round--yellow(href="#!")
 					span Sign up now
-					span.arrowRight
+					span.arrowRight-black
 
