--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -46,6 +46,7 @@
 .btn-round--yellow{
 	border-color: $yellow;
 	background-color: $yellow;
+	color: #000;
 	&:hover{
 		background-color: #ffc430;
         border-color: #ffc123;
