--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -1,4 +1,8 @@
 /*input submit with arrow*/
+form{
+  width: 100%;
+  display: block;
+}
 .submit-arrow{
 	position: relative;
 	display: inline-block;
@@ -18,6 +22,7 @@
 
 .form-item{
 	position: relative;
+  margin-bottom: 20px;
 	input{
 		background: #FFFFFF;
 		height: 50px;
@@ -35,6 +40,7 @@
 			font-size: 20px;
 			font-family: inherit;
 			font-weight: 700;
+      color: #c4c4c4;
 		}
 	}
 	label{
@@ -61,8 +67,8 @@
 	grid-template-columns: 1fr 1fr;
 	column-gap: 20px;
 	margin-top: 20px;
-	.form-item+.form-item{
-		margin-top: 0;
+	.form-item{
+		margin-bottom: 0;
 	}
 }
 .form-btn{
@@ -79,9 +85,7 @@
 input[type="radio"]{
 	appearance:none;
 }
-.form-item+.form-item{
-	margin-top: 20px;
-}
+
 .form-item .custom-radiobutton{
 	margin-bottom: 0;
 	input{
