--- a/src/pug/blocks/_aside-menu.pug
+++ b/src/pug/blocks/_aside-menu.pug
@@ -7,7 +7,7 @@
 		nav.aside-menu__list
 			//=== single block ====
 			.aside-menu__list-block
-				a(href="#!") Solar panels
+				a(href="categories.html") Solar panels
 				a(href="#!") Heat pumps
 				a(href="#!") Bathroom and Kitchen improvement
 				a(href="#!") Glazing
