--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,10 +2,13 @@ extends ../layouts/layout.pug
 
 block content
 	include ../blocks/_aside-menu
+	include ../sections/_header.pug
 	main.home-page
-		include ../sections/_header.pug
 		include ../sections/_home-page-header.pug
 		include ../sections/_we-know.pug
+		include ../sections/_review-cards.pug
+		include ../sections/_popular.pug
+		include ../sections/_number-card-bottom.pug
 	
 	
 	
