--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
  @import "blocks/aside-menu.scss";
  @import "blocks/quiz.scss";
  @import "blocks/card-number.scss";
+ @import "blocks/category-card.scss";
 
  //sections
  @import "sections/header";
@@ -19,3 +20,4 @@
  @import "sections/we-know";
  @import "sections/review";
  @import "sections/populare";
+ @import "sections/faq";
