--- a/src/scss/blocks/_card-number.scss
+++ b/src/scss/blocks/_card-number.scss
@@ -85,5 +85,22 @@
     column-gap: 30px;
 }
 .card-bg{
+    position: relative;
+    border-radius: 10px;
+
+    &:after{
+        content:'';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;        
+        left: 0;
+        border-radius: 10px;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    } 
+    &>*{
+        position: relative;
+        z-index: 2;
+    } 
     .form-btn{margin-top: 30px;}
 }
